# react-python-mono

./: README.md  package.json  pnpm-lock.yaml  turbo.json
@packages/codegen/: codegen.yml  graphql.ts  package.json  tsconfig.json
@packages/codegen/graphql/: operation.graphql
@packages/codegen/tsconfig/: base.json
apps/api/: package.json  pyproject.toml
apps/api/api_main/: __init__.py
apps/api/models/: models.py
apps/api/src/: app.py
apps/web/: .eslintrc.json  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(public)/: page.tsx
apps/web/app/(public)/_components/: date-range-picker.tsx  main-nav.tsx  poll-page.tsx  team-switcher.tsx
apps/web/app/(public)/_forms/: branding-forms.tsx  data-server-forms.tsx
apps/web/components/ui/: button.tsx  date-picker.tsx
apps/web/components/ui/auto-form/: config.ts  index.tsx  types.ts  utils.ts
apps/web/components/ui/auto-form/fields/: array.tsx  checkbox.tsx  date.tsx  enum.tsx  input.tsx  number.tsx  object.tsx  radio-group.tsx  switch.tsx  textarea.tsx
apps/web/lib/: apollo-wrapper.tsx  client.js
apps/web/styles/: globals.css
