[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Baptiste <53108208+Bat-m@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "api_main"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launch = "api_main:__init__"